--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   background-color: #2196f3;
 }
-.grid-item {
+.grid-item, .grid-item-num {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
