--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,174 @@
-.wrapper {
+/* *,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+} */
+
+.calculator {
+  border: 5px solid #ccc;
+  border-radius: 5px;
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+  width: 400px;
+}
+
+.calculator-screen {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  grid-template-rows: 40px 40px;
+  padding: 10px;
+  padding-right: 40px;
+  background-color: steelblue;
 }
 
-.clear_delete_contaienr {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  font-size: 1px;
+#previousOperand {
+  text-align: end;
+  font-size: xx-large;
+  color: black;
+  background-color: steelblue;
+  border: none;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: #2196f3;
+#operator {
+  text-align: end;
+  font-size: x-large;
+  color: white;
+  background-color: steelblue;
+  border: none;
 }
-.grid-item, .grid-item-num {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
+
+#operand, #operand_test {
+  text-align: end;
+  font-size: x-large;
+  color: white;
+  background-color: steelblue;
+  border: none;
+}
+
+button {
+  height: 60px;
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px solid #c4c4c4;
+  background-color: transparent;
+  font-size: 2 rem;
+  color: #333;
+  background-image: linear-gradient(
+    to bottom,
+    transparent,
+    transparent,
+    50%,
+    rgba(0, 0, 0, 0.04)
+  );
+  box-shadow: inset 000 1px rgba(255, 255, 255, 0.05),
+    inset 0 1px 0 0 rgba(255, 255, 255, 0.45),
+    inset 0 --1px 0 0 rgba(255, 255, 255, 0.15);
+  text-shadow: 0 1px rgba(255, 255, 255, 0.4);
 }
 
 button:hover {
-  background-color: black;
-  color: white;
+  background-color: #eaeaea;
 }
 
-button:active {
-  background-color: red;
+.operator {
+  background-color: #ff0000;
   color: white;
+  font-size: x-large;
 }
 
-#display {
-  background-color: aqua;
+.operator:hover {
+  background-color: #f50000;
+}
+
+.number,
+.decimal {
+  background-color: white;
+  font-size: x-large;
+}
+
+.all-clear {
+  background-color: #00bbff;
+  border-color: #b0353a;
+  color: #fff;
+}
+
+.all-clear:hover {
+  background-color: #15e2f5;
+}
+
+.equal-sign {
+  background-color: #00bbff;
+
+  border-color: #337cac;
+  color: #fff;
+  height: 100%;
+  grid-area: 3/4/6/5;
+}
+
+.equal-sign:hover {
+  background-color: #15e2f5;
+}
+
+.calculator-keys {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
+  background-color: white;
+}
+
+body {
+  /* background-color: rgb(78, 85, 124);
+  height: 100vh;
+  display: flex;
+  align-items: stretch; */
+  margin: 0;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: cornsilk;
+}
+
+.calculator-wrapper {
+  align-self: center;
+  margin: 10px;
+}
+
+.header {
+  background-color: rgb(248, 248, 226);
+  font-size: 3em;
+  font-family: monospace;
+  align-items: center;
+  color: black;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-2 {
+  align-content: flex-end;
+  flex-grow: 3;
+  background-color: honeydew;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-right: 125px;
+}
+
+.image {
+  height: auto;
+  width: auto;
+  max-width: 100px;
+  max-height: 100px;
 }
